--- a/nvme_rhel_85.adoc
+++ b/nvme_rhel_85.adoc
@@ -367,106 +367,22 @@ NSID  UUID                                   Size
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, ensure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
 
-=== LPFC Verbose Logging
+=== lpfc verbose logging
 
-. You can set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events:
-+
-----
+include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+  
+=== qla2xxx verbose logging
 
-#define LOG_NVME 0x00100000 /* NVME general events. */
-#define LOG_NVME_DISC 0x00200000 /* NVME Discovery/Connect events. */
-#define LOG_NVME_ABTS 0x00400000 /* NVME ABTS events. */
-#define LOG_NVME_IOERR 0x00800000 /* NVME IO Error events. */
+include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
 
-----
-+
-. After setting any of these values, run `dracut-f` command to recreate the `initramfs` and reboot the host.
 
-. After rebooting, verify the settings:
-+
-----
-
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc lpfc_log_verbose=0xf00083
-
-# cat /sys/module/lpfc/parameters/lpfc_log_verbose
-15728771
-----
-
-=== qla2xxx Verbose Logging
-
-There is no similar specific qla2xxx logging for NVMe/FC as for lpfc driver. Therefore, you may set the general qla2xxx logging level using the following steps:
-
-. Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
-
-. Recreate the `initramfs` by running `dracut -f` command and then reboot the host.
-
-. After reboot, verify that the verbose logging has been applied as follows:
-+
-----
-# cat /etc/modprobe.d/qla2xxx.conf
-options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
-# cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging
-507510784
-----
-
-=== Common nvme-cli Errors and Workarounds
-
-The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme connect-all operations and the workarounds are shown in the following table:
-
-[options="header", cols="20, 20, 50"]
-|===
-|Errors displayed by `nvme-cli`  | Probable cause | Workaround
-| `Failed to write to /dev/nvme-fabrics: Invalid argument`
-|Incorrect syntax
-|Ensure you are using the correct syntax for the above nvme commands.
-|`Failed to write to /dev/nvme-fabrics: No such file or directory`  |Multiple issues could trigger this.
-Passing wrong arguments to the nvme commands is one of the common causes.
-a| * Ensure you have passed the correct arguments (such as, correct WWNN string, WWPN string, and more) to the commands.
-* If the arguments are correct, but you still see this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper, the NVMe initiator showing as `Enabled`, and the NVMe/FC target LIFs properly showing up here under the remote ports sections.
-Example:
-+
-----
-
-# cat /sys/class/scsi_host/host*/nvme_info
-NVME Initiator Enabled
-NVME LPORT lpfc0 WWPN x10000090fae0ec9d WWNN x20000090fae0ec9d DID x012000 ONLINE
-NVME RPORT WWPN x200b00a098c80f09 WWNN x200a00a098c80f09 DID x010601 TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000071 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a6 Outstanding 0000000000000001
-NVME Initiator Enabled
-NVME LPORT lpfc1 WWPN x10000090fae0ec9e WWNN x20000090fae0ec9e DID x012400 ONLINE
-NVME RPORT WWPN x200900a098c80f09 WWNN x200800a098c80f09 DID x010301 TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000073 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a8 Outstanding 0000000000000001
-----
-
-* If the target LIFs don't show up as above in the nvme_info output, check the `/var/log/messages` and `dmesg` output for any suspicious NVMe/FC failures, and report or fix accordingly.
-
-|`No discovery log entries to fetch`  a|Generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect `hostnqn` string has been added to the respective subsystem. a|Ensure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show` command).
-
-|`Failed to write to /dev/nvme-fabrics: Operation already in progress`  a|Seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
-a|None. For `nvme discover`, try running this command after some time. For `nvme connect` and `connect-all`, run the `nvme list` command to verify that the namespace devices are already created and displayed on the host.
-
-|===
+include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
 === When to contact technical support
-If you are still facing issues, please collect the following files and command outputs and contact technical support for further triage:
 
-----
-cat /sys/class/scsi_host/host*/nvme_info
-/var/log/messages
-dmesg
-nvme discover output as in:
-nvme discover --transport=fc --traddr=nn-0x200a00a098c80f09:pn-0x200b00a098c80f09 --host-traddr=nn-0x20000090fae0ec9d:pn-0x10000090fae0ec9d
-nvme list
-nvme list-subsys /dev/nvmeXnY
-----
+include::_include/hu/reuse_hu_contact_tech_support.adoc[]
+
 
 // Jira EOPS-730, 2022-08-12
