--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -388,103 +388,31 @@ NSID   UUID                               Size
 }
 ----
 
-== Troubleshooting
-Before commencing any troubleshooting for any NVMe/FC failures, always ensure you are running a configuration that is compliant to the IMT specifications. And then proceed to the following steps to debug any host side issues.
-
-=== lpfc verbose logging
-Following is the list of lpfc driver logging bitmasks available for NVMe/FC, as seen at `drivers/scsi/lpfc/lpfc_logmsg.h`:
-----
-#define LOG_NVME 0x00100000 /* NVME general events. */
-#define LOG_NVME_DISC 0x00200000 /* NVME Discovery/Connect events. */
-#define LOG_NVME_ABTS 0x00400000 /* NVME ABTS events. */
-#define LOG_NVME_IOERR 0x00800000 /* NVME IO Error events. */
-----
-
-You can set the `lpfc_log_verbose` driver setting (appended to the lpfc line at `/etc/modprobe.d/lpfc.conf`) to any of the values above for logging NVMe/FC events from a `lpfc` driver perspective. And then recreate the `initiramfs` by running `dracut -f` command and then reboot the host. After rebooting, verify that the verbose logging has applied by checking the following, using the above `LOG_NVME_DISC` bitmask as an example:
-----
-# cat /etc/modprobe.d/lpfc.conf
-options lpfc_enable_fc4_type=3 lpfc_log_verbose=0xf00083
-----
-----
-# cat /sys/module/lpfc/parameters/lpfc_log_verbose
-15728771
-----
-=== qla2xxx verbose logging
-There is no similar specific qla2xxx logging for NVMe/FC, as is there in `lpfc`. You can set the general qla2xxx logging level here, for example, `ql2xextended_error_logging=0x1e400000`. This can be done by appending this value to the corresponding `modprobe qla2xxx conf` file. And then recreate the `initramfs` by running `dracut -f` and then reboot the host. After reboot, verify that the verbose logging has applied as follows:
-----
-# cat /etc/modprobe.d/qla2xxx.conf
-options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
-----
-----
-# cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging
-507510784
-----
 == Known issues
 
 [cols="10,30,30,10",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
-|1479047	|RHEL 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 9.0 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047]	|RHEL 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 9.0 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 
-  	|2087000
+|2087000
 |===
 
-=== Common nvme-cli errors and workarounds
+== Troubleshooting
 
-[options="header", cols="20, 20, 50"]
-|===
-|Errors displayed by `nvme-cli`  | Probable cause | Workaround
-| `Failed to write to /dev/nvme-fabrics: Invalid argument` error during `nvme discover`, `nvme connect`, or `nvme connect-all`
-| This error message is generally displayed if the syntax is wrong.
-| Ensure you are using the correct syntax for the above nvme commands.
+Before commencing any troubleshooting for any NVMe/FC failures, make sure you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the following steps to debug any host side issues.
 
-| `Failed to write to /dev/nvme-fabrics: No such file or directory` during  `nvme discover`, `nvme connect`, or `nvme connect-all`
-| Multiple issues could trigger this. Some of the common cases are:
+=== lpfc verbose logging
 
-You passed wrong arguments to the above nvme commands.
-a| Ensure you have passed the appropriate arguments (such as appropriate WWNN string, WWPN string, and more) for the above commands.
-If the arguments are correct, but still seeing this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper with the NVMe initiator showing as `Enabled` and NVMe/FC target LIFs properly showing up here under the remote ports sections. For example,
+include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+  
+=== qla2xxx verbose logging
 
-----
-# cat /sys/class/scsi_host/host*/nvme_info
-NVME Initiator Enabled
-NVME LPORT lpfc0 WWPN x10000090fae0ec9d WWNN x20000090fae0ec9d DID x012000 ONLINE
-NVME RPORT WWPN x200b00a098c80f09 WWNN x200a00a098c80f09 DID x010601 TARGET DISCSRVC ONLINE
-
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000071 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a6 Outstanding 0000000000000001
-
-NVME Initiator Enabled
-NVME LPORT lpfc1 WWPN x10000090fae0ec9e WWNN x20000090fae0ec9e DID x012400 ONLINE
-NVME RPORT WWPN x200900a098c80f09 WWNN x200800a098c80f09 DID x010301 TARGET DISCSRVC ONLINE
-
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000073 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a8 Outstanding 0000000000000001
-----
-Workaround: If the target LIFs don't show up as above in the `nvme_info` output, check the `/var/log/messages` and `dmesg` output for any suspicious NVMe/FC failures, and report or fix accordingly.
+include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
 
 
-| `No discovery log entries to fetch` during  `nvme discover`, `nvme connect`, or `nvme connect-all`
-a| This error message is generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect `hostnqn` string has been added to the respective subsystem.
-a| Ensure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show`).
-
-|`Failed to write to /dev/nvme-fabrics: Operation already in progress` during `nvme discover`, `nvme connect` or `nvme connect-all`
-| This error message is seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
-a| None. For `nvme discover`, try running this command after some time. And for `nvme connect` and `connect-all`, run a `nvme list` to verify that the namespace devices are already created and displayed on the host.
-|===
+include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
 === When to contact technical support
-If you are still facing issues, please collect the following files and command outputs and send them for further triage:
-----
-cat /sys/class/scsi_host/host*/nvme_info
-/var/log/messages
-dmesg
-nvme discover output as in:
-nvme discover --transport=fc --traddr=nn-0x200a00a098c80f09:pn-0x200b00a098c80f09 --host-traddr=nn-0x20000090fae0ec9d:pn-0x10000090fae0ec9d
-nvme list
-nvme list-subsys /dev/nvmeXnY
-----
+
+include::_include/hu/reuse_hu_contact_tech_support.adoc[]
