--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -34,12 +34,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* *No auto-reconnect after paths get reinstated* - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* *No auto-connect during host boot* - NVMe/TCP cannot connect automatically during host boot.
-
+None.
 
 == Configuration requirements
 
